Добавляет изменения в input в модальном окне;

--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
 
         <div class="field-group email">
           <label class="modal-label" for="delivery-email">Ваш e-mail:</label>
-          <input class="modal-input input-email invalid" type="email" id="delivery-email" name="email"
+          <input class="modal-input input-email" type="email" id="delivery-email" name="email"
                  placeholder="Введите e-mail" value="почта" required>
           <span class="modal-help">Забавный у вас адрес</span>
         </div>
