Добавляет изменения по правкам;

--- a/catalog.html
+++ b/catalog.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>HTML Academy: Девайс-каталог</title>
   <link rel="stylesheet" href="styles/styles.css">
-  <link rel="icon" href="images/favicon.ico">
+  <link rel="icon" href="favicon.ico">
 </head>
 <body>
   <header class="page-header page-header-catalog container">
@@ -76,12 +76,9 @@
               </div>
               <a class="cart-open-link" href="#">Открыть корзину</a>
             </div>
-
           </li>
         </ul>
       </div>
-      </div>
-
 
       <div class="catalogue-wrapper">
         <button class="catalogue-button" type="button">
