--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="ru" xmlns="http://www.w3.org/1999/html">
+<html lang="ru">
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Девайс</title>
   <link rel="stylesheet" href="styles/styles.css">
-  <link rel="icon" href="images/favicon.ico">
+  <link rel="icon" href="favicon.ico">
 </head>
 <body>
   <header class="page-header container">
@@ -73,12 +73,9 @@
               </div>
               <a class="cart-open-link" href="#">Открыть корзину</a>
             </div>
-
           </li>
         </ul>
       </div>
-      </div>
-
 
       <div class="catalogue-wrapper">
         <button class="catalogue-button" type="button">
@@ -194,7 +191,7 @@
             <p class="slider-title main-title">Делай селфи,<br>как Бен Стиллер! </p>
             <p class="slider-description">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!)
               метров длиной и весом всего 5 кг.</p>
-            <a class="button product-button" href="catalog.html">ПОДРОБНЕЕ</a>
+            <a class="button product-button" href="catalog.html">Подробнее</a>
             <dl class="features-list">
               <div class="spec-wrap">
                 <dt class="features-term">Длина палки</dt>
@@ -328,7 +325,7 @@
             <li class="companies-item">СДИК</li>
             <li class="companies-item">ТоксБерри</li>
           </ul>
-          <a class="button companies-button" href="#">ПОДРОБНЕЕ О НАС</a>
+          <a class="button companies-button" href="#">Подробнее о нас</a>
         </section>
 
         <section class="contacts">
@@ -345,7 +342,7 @@
             <li class="contacts-schedule-item">пн—пт: с 10:00 до 22:00</li>
             <li class="contacts-schedule-item">сб—вс: с 10:00 до 19:00</li>
           </ul>
-          <a class="button contacts-button" href="#">НАПИШИТЕ НАМ</a>
+          <a class="button contacts-button" href="#">Напишите нам</a>
         </section>
       </div>
 
